modify slider.css by adding overflow hidden to stop iverflowing images while loading

--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -1,4 +1,5 @@
 #image-height {
   max-width: 270px;
   height: 334.35;
+  overflow: hidden;
 }
